--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
             .nav-item{
                 font-size: 1.5rem;
             }
+            .btn-primary {
+                background-color: #2e7354;
+                border-color: #2e7354;
+            }
+            .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active{
+                background-color:#21573f;
+                border-color: #21573f;
+            }
+
         </style>
         <link href="templates/landing.css" rel="stylesheet">
     </head>
