--- a/pillar-construction.html
+++ b/pillar-construction.html
@@ -11,7 +11,7 @@
                 font-size: 1.5rem;
             }
             .facts .card-icon i {
-              background-color: #ffcc00;
+              background-color: #c6b56c;
             }
             .section-bg {
               background-color: #5c651712;
