--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                       <div class="col-md-12"></div>
                   </div>
                   <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
                       <ul class="navbar-nav mx-auto">
                       <li class="nav-item px-3">
                           <a class="nav-link" href="index.html">Our Solution</a>
