--- a/pillar-ocean.html
+++ b/pillar-ocean.html
@@ -5,6 +5,7 @@
         <title>Ocean-stored carbon</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">  
         <link rel="stylesheet" href="templates/style.css">   
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         <link rel="icon" href="images/logo.svg">   
         <style>
             .nav-item{
@@ -56,6 +57,36 @@
       </div>
     </nav>
   
+    <!-- Mobile navbar for smaller screens -->
+    <nav class="navbar navbar-light bg-body-tertiary d-lg-none">
+      <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent2" aria-controls="navbarToggleExternalContent2" aria-expanded="false" aria-label="Toggle navigation">
+              <i class="fas fa-bars text-dark"></i>
+          </button>
+          <a class="navbar-brand" href="#">
+              <img src="images/logo.png" alt="Logo" style="height: 2rem;">
+          </a>
+      </div>
+  </nav>
+  <div class="collapse" id="navbarToggleExternalContent2">
+      <div class="bg-white shadow-3 py-4 px-3">
+          <ul class="nav flex-column">
+              <li class="nav-item"><a href="index.html" class="nav-link text-dark">Our Solution</a></li>
+              <li class="nav-item dropdown">
+                  <a href="#" class="nav-link dropdown-toggle text-dark" id="mobileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pillars</a>
+                  <ul class="dropdown-menu" aria-labelledby="mobileDropdown">
+                      <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                      <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+                      <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+                      <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item"><a href="entrepreneurs.html" class="nav-link text-dark">Entrepreneurs</a></li>
+              <li class="nav-item"><a href="faq.html" class="nav-link text-dark">FAQ</a></li>
+          </ul>
+      </div>
+  </div>
+
   <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
       <h1 class="display-1 title">Ocean-stored Carbon</h1>
   </div>
