--- a/pillar-ocean.html
+++ b/pillar-ocean.html
@@ -71,18 +71,18 @@
   <div class="collapse" id="navbarToggleExternalContent2">
       <div class="bg-white shadow-3 py-4 px-3">
           <ul class="nav flex-column">
-              <li class="nav-item"><a href="index.html" class="nav-link text-dark">Our Solution</a></li>
-              <li class="nav-item dropdown">
-                  <a href="#" class="nav-link dropdown-toggle text-dark" id="mobileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pillars</a>
-                  <ul class="dropdown-menu" aria-labelledby="mobileDropdown">
-                      <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
-                      <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
-                      <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
-                      <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
-                  </ul>
-              </li>
-              <li class="nav-item"><a href="entrepreneurs.html" class="nav-link text-dark">Entrepreneurs</a></li>
-              <li class="nav-item"><a href="faq.html" class="nav-link text-dark">FAQ</a></li>
+          <li class="nav-item" style="padding-top: 10px;"><a href="index.html" class="nav-link text-dark">Our Solution</a></li>
+          <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle text-dark" id="mobileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pillars</a>
+          <ul class="dropdown-menu" aria-labelledby="mobileDropdown">
+              <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+              <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+              <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+              <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
+          </ul>
+          </li>
+          <li class="nav-item"><a href="entrepreneurs.html" class="nav-link text-dark">Entrepreneurs</a></li>
+          <li class="nav-item"><a href="faq.html" class="nav-link text-dark">FAQ</a></li>
           </ul>
       </div>
   </div>
