Mobile navbar fix

--- a/entrepreneurs.html
+++ b/entrepreneurs.html
@@ -50,17 +50,17 @@
     </nav>
 
     <!-- Mobile navbar for smaller screens -->
-    <nav class="navbar navbar-light bg-body-tertiary d-lg-none">
+    <nav class="navbar navbar-light bg-body-tertiary d-lg-none" style="height: 6vh">
       <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent2" aria-controls="navbarToggleExternalContent2" aria-expanded="false" aria-label="Toggle navigation">
-              <i class="fas fa-bars text-dark"></i>
+              <i class="fas fa-bars text-secondary"></i>
           </button>
           <a class="navbar-brand" href="#">
-              <img src="images/logo.png" alt="Logo" style="height: 2rem;">
+              <img src="images/logo.png" alt="Logo" style="height: 1.5em;">
           </a>
       </div>
   </nav>
-  <div class="collapse" id="navbarToggleExternalContent2">
+  <div class="collapse" id="navbarToggleExternalContent2" style="padding-top:30px;">
       <div class="bg-white shadow-3 py-4 px-3">
           <ul class="nav flex-column">
               <li class="nav-item"><a href="index.html" class="nav-link text-dark">Our Solution</a></li>
@@ -82,7 +82,7 @@
         <!-- Body content here -->
         <!-- Carousel -->
         <!-- The buttons in the carousel should open the same modals for entrepreneur stories as the highlights underneath -->
-    <div id="carouselExampleCaptions" class="carousel slide h-30" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide h-30" data-bs-ride="carousel" style="margin-top: 10%;">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
