--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <nav class="navbar navbar-light bg-body-tertiary d-lg-none">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent2" aria-controls="navbarToggleExternalContent2" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars text-dark"></i>
+                <i class="fas fa-bars text-dark" onclick="toggleLandingTitle()"></i>
             </button>
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="Logo" style="height: 2rem;">
@@ -92,7 +92,7 @@
     </div>
 
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
-                <h1 class="display-1 title">Harness Nature to Address <br> Climate Change</h1>
+                <h1 class="display-1 title" id="landingTitle">Harness Nature to Address <br> Climate Change</h1>
                 <!-- <p class="lead">Maybe the future isn't all smokestacks and screens?</p> -->
             </div>
 
