--- a/entrepreneurs.html
+++ b/entrepreneurs.html
@@ -82,7 +82,7 @@
         <!-- Body content here -->
         <!-- Carousel -->
         <!-- The buttons in the carousel should open the same modals for entrepreneur stories as the highlights underneath -->
-    <div id="carouselExampleCaptions" class="carousel slide h-30" data-bs-ride="carousel" style="margin-top: 10%;">
+    <div id="carouselExampleCaptions" class="carousel slide h-30" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
